jsonschemadsl2ecore.trafo.opt/test/test103/validtests/example8.test103
{
	"ale": {
		"runs-on": true
	} ,
	"prop1":"aaaaaaaa",
	"prop2":1,
	"prop3":"",
	"prop4":""
}                 