jsonschemadsl2ecore.trafo.opt/test/test103/invalidtests/example2.test103
{
	"ale": {
		"runs-on": 1
	} ,
	"prop4":false
}                 